:recycle: refactor(security): simplify security config and enhance exception handling
- Simplified `csrf` disabling using `AbstractHttpConfigurer::disable`.
- Replaced `Arrays.asList` with `List.of` for exposed headers.
- Added `@Slf4j` to `GlobalExceptionHandler` for exception logging.
- Improved exception handling with better structure and logging.